--- a/build.xml
+++ b/build.xml
@@ -36,13 +36,13 @@
 		<mkdir dir="${lib.dir}"/>
 		<exec executable="bash">
 			<arg value="-c"/>
-			<arg line='"wget -q -O - "${commons_cli.location}" | tar --wildcards -xzv &quot;commons-cli-1.5.0/commons-cli-1.5.0.jar&quot; ; mv -iv commons-cli-1.5.0/*.jar lib; rmdir commons-cli-1.5.0 "'/>
+			<arg line='"wget -q -O - &quot;${commons_cli.location}&quot; | tar --wildcards -xzv &quot;commons-cli-1.5.0/commons-cli-1.5.0.jar&quot; ; mv -iv commons-cli-1.5.0/*.jar lib; rmdir commons-cli-1.5.0 "'/>
 		</exec>
 	</target>
 	
 	<target name="compile" depends="fetch_libraries">
 		<mkdir dir="${classes.dir}"/>
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" fork="true" executable="${javac.path}" sourcepath="${src.dir}" />
+		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" fork="true" executable="${javac.path}" sourcepath="${src.dir}" deprecation="Yes" />
 		
 	</target>
 	
