--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 	<property name="tmp.dir"				value="/dev/shm/ant_java_jsystemtools" />
 	<property name="java.basedir"			value="/usr/lib/jvm/graalvm-ce-java17" />
 	<property name="javac.path"				value="${java.basedir}/bin/javac" />
+	<property name="jarfile"				value="build/MainProgram.jar" />
 	<property name="native_image.path"		value="${java.basedir}/bin/native-image" />
 	<property name="exec_compessor"			value="/usr/bin/upx" />
 	<property name="commons_cli.location"	value="https://dlcdn.apache.org/commons/cli/binaries/commons-cli-1.5.0-bin.tar.gz" />
@@ -44,6 +45,22 @@
 		<mkdir dir="${classes.dir}"/>
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" fork="true" executable="${javac.path}" sourcepath="${src.dir}" deprecation="Yes" />
 	</target>
+
+	<target name="pack" depends="compile">
+        <jar destfile="${jarfile}" compress="false" duplicate="preserve" index="true">
+            <fileset dir="${classes.dir}"/>
+            <archives>
+                <zips>
+                    <fileset dir="${lib.dir}" includes="**/*.jar"/>
+                </zips>
+            </archives>
+            <manifest>
+                <attribute name="Main-Class" value="${main-class}" />
+                <attribute name="Class-Path" value="lib/ classes/" />
+                <attribute name="Built-By" value="zonkiie" />
+            </manifest>
+        </jar>    
+    </target>
 	
 	<!-- Important: to get the string for the classpath, use the function ${toString:classpath} -->
 	<target name="native_image" depends="compile">
@@ -57,7 +74,5 @@
 			<arg value="${target_executable}" />
 		</exec>
 	</target>
-
-
 	
 </project>
