--- a/build.xml
+++ b/build.xml
@@ -1,19 +1,22 @@
 <project name="jsystemtools" basedir="." default="compile">
 
-	<property name="src.dir"				value="src" />
-	<property name="build.dir"				value="build" />
-	<property name="classes.dir"			value="${build.dir}/classes" />
-	<property name="jar.dir"				value="${build.dir}/jar" />
-	<property name="main-class"				value="MainProgram" />
-	<property name="target_executable"		value="mainprogram" />
-	<property name="lib.dir"				value="lib" />
-	<property name="tmp.dir"				value="/dev/shm/ant_java_jsystemtools" />
-	<property name="java.basedir"			value="/usr/lib/jvm/graalvm-ce-java17" />
-	<property name="javac.path"				value="${java.basedir}/bin/javac" />
-	<property name="jarfile"				value="${jar.dir}/MainProgram.jar" />
-	<property name="native_image.path"		value="${java.basedir}/bin/native-image" />
-	<property name="exec_compessor"			value="/usr/bin/upx" />
-	<property name="commons_cli.location"	value="https://dlcdn.apache.org/commons/cli/binaries/commons-cli-1.5.0-bin.tar.gz" />
+	<property name="src.dir"					value="src" />
+	<property name="build.dir"					value="build" />
+	<property name="classes.dir"				value="${build.dir}/classes" />
+	<property name="jar.dir"					value="${build.dir}/jar" />
+	<property name="main-class"					value="MainProgram" />
+	<property name="target_executable"			value="mainprogram" />
+	<property name="lib.dir"					value="lib" />
+	<property name="tmp.dir"					value="/dev/shm/ant_java_jsystemtools" />
+	<property name="java.basedir"				value="/usr/lib/jvm/graalvm-ce-java17" />
+	<property name="javac.path"					value="${java.basedir}/bin/javac" />
+	<property name="jarfile"					value="${jar.dir}/MainProgram.jar" />
+	<property name="native_image.path"			value="${java.basedir}/bin/native-image" />
+	<property name="exec_compessor"				value="/usr/bin/upx" />
+	<property name="commons_cli.location"		value="https://dlcdn.apache.org/commons/cli/binaries/commons-cli-1.5.0-bin.tar.gz" />
+	<property name="commons_cli.extract"		value="commons-cli-1.5.0/commons-cli-1.5.0.jar" />
+	<property name="commons_config.location"	value="https://dlcdn.apache.org//commons/configuration/binaries/commons-configuration2-2.7-bin.tar.gz" />
+	<property name="commons_config.extract"		value="commons-configuration2-2.7/commons-configuration2-2.7.jar" />
 	
 	<!-- Important: Add all compiled class directories to classpath -->
 	<path id="classpath">
@@ -37,7 +40,11 @@
 		<mkdir dir="${lib.dir}"/>
 		<exec executable="bash">
 			<arg value="-c"/>
-			<arg line='"wget -q -O - &quot;${commons_cli.location}&quot; | tar --wildcards -xzv &quot;commons-cli-1.5.0/commons-cli-1.5.0.jar&quot; ; mv -iv commons-cli-1.5.0/*.jar lib; rmdir commons-cli-1.5.0 "'/>
+			<arg line='"wget -q -O - &quot;${commons_cli.location}&quot; | tar --wildcards -xzv &quot;${commons_cli.extract}&quot; ; mv -iv ${commons_cli.extract} lib; rmdir $(dirname ${commons_cli.extract}) "'/>
+		</exec>
+		<exec executable="bash">
+			<arg value="-c"/>
+			<arg line='"wget -q -O - &quot;${commons_config.location}&quot; | tar --wildcards -xzv &quot;${commons_config.extract}&quot; ; mv -iv ${commons_config.extract} lib; rmdir $(dirname ${commons_config.extract}) "'/>
 		</exec>
 	</target>
 	
