--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,8 @@
 	<property name="exec_compessor"				value="/usr/bin/upx" />
 	<property name="commons_cli.location"		value="https://dlcdn.apache.org/commons/cli/binaries/commons-cli-1.5.0-bin.tar.gz" />
 	<property name="commons_cli.extract"		value="commons-cli-1.5.0/commons-cli-1.5.0.jar" />
+	<property name="commons_lang.location"		value="https://dlcdn.apache.org/commons/lang/binaries/commons-lang3-3.12.0-bin.tar.gz" />
+	<property name="commons_lang.extract"		value="commons-lang3-3.12.0/commons-lang3-3.12.0.jar" />
 	<property name="ini4j.location"				value="https://repo1.maven.org/maven2/org/ini4j/ini4j/0.5.4/ini4j-0.5.4.jar" />
 	<property name="ini4j.extract"				value="ini4j-0.5.4.jar" />
 	
@@ -41,6 +43,10 @@
 		<exec executable="bash">
 			<arg value="-c"/>
 			<arg line='"wget -q -O - &quot;${commons_cli.location}&quot; | tar --wildcards -xzv &quot;${commons_cli.extract}&quot; ; mv -iv ${commons_cli.extract} lib; rmdir $(dirname ${commons_cli.extract}) "'/>
+		</exec>
+		<exec executable="bash">
+			<arg value="-c"/>
+			<arg line='"wget -q -O - &quot;${commons_lang.location}&quot; | tar --wildcards -xzv &quot;${commons_lang.extract}&quot; ; mv -iv ${commons_lang.extract} lib; rmdir $(dirname ${commons_lang.extract}) "'/>
 		</exec>
 		<exec executable="bash">
 			<arg value="-c"/>
